# sw-hello-world

./: LICENSE
.github/actions/build-docker-image/: action.yml
.github/workflows/: build.yaml
tt-metal/: Dockerfile  Dockerfile.6u  Dockerfile.tg
tt-metal/ttmi-custom-smoke-tests/: pyproject.toml
tt-metal/ttmi-custom-smoke-tests/src/check_6u_eth_status/: __init__.py
tt-umd/: Dockerfile
