[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

# Skeleton from https://github.com/rbroderi/protocol_implements_decorator
[project]
authors = [
  { name = "Raymond Kim", email = "rkim@tenstorrent.com" }
]
description = "Check eth status of 6U"
name = "ttmi-custom-smoke-tests"
requires-python = ">=3.10"
version = "0.1"
license = {"file" = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "pyluwen @ git+https://github.com/tenstorrent/luwen.git@v0.6.3#subdirectory=crates/pyluwen",
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pytest",
  "ruff",
  "toml-sort",
  "pre-commit",
]
